shalinee | menu icon align issue on ipad

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -9907,6 +9907,9 @@ input.mat-input-element{
             width: 100%;
             white-space: nowrap;
         }
+        #setting-tab-wrapper .purchase-setting-tab.tab-integraton .nav-tabs{
+            display: inline-flex;
+        }
         #setting-tab-wrapper .tab-integraton .nav-tabs > li > a {
             width: 90px;
             height: 90px !important;
@@ -10747,6 +10750,14 @@ input.mat-input-element{
     }
 
     @media (max-width: 375px) {
+        .setting-page.tb-pl-bs-tabs ul.nav.nav-tabs{
+            overflow-x: auto;
+            white-space: nowrap;
+            display: inline-block;
+            li{
+                float: none !important;
+            }
+        }
         .linked-add{
             .popover{
                 &.outside-popover {
